Fixed attandance log
