# src/controllers/eventController.js
@@ -3,6 +3,7 @@ import ApiResponse from "../utils/apiResponse.js";
 import { findUpcomingEvents, getEventById } from "../models/eventModel.js";
 import { addEvent } from "../models/eventModel.js";
 import { getBookingByConfirmationCode } from "../models/bookingModel.js";
+import { checkAttendance, insertAttendance } from "../models/attendanceModel.js";
 
 export const listEvents = asyncHandler(async (req, res) => {
   const events = await findUpcomingEvents();
@@ -14,7 +15,7 @@ export const createEvent = asyncHandler(async (req, res) => {
   ApiResponse.created(res, { id: eventId }, "Event created successfully");
 });
 
-export const checkAttendance = asyncHandler(async (req, res) => {
+export const addAttendance = asyncHandler(async (req, res) => {
   const eventExists = await getEventById(req.params.id);
   if (!eventExists) {
     return ApiResponse.notFound(res, "Event not found");
@@ -24,5 +25,26 @@ export const checkAttendance = asyncHandler(async (req, res) => {
     return ApiResponse.badRequest(res, "Invalid confirmation code");
   }
 
-  ApiResponse.success(res, getDetails, "Confirmation code is valid");
+  const eventDate = new Date(getDetails.event_date);
+  const currentDate = new Date();
+  if (currentDate < eventDate) {
+    return ApiResponse.badRequest(res, "Event has not started yet");
+  }
+
+  if (currentDate > eventDate) {
+    return ApiResponse.badRequest(res, "Event has already ended");
+  }
+
+  const isAlreadyCheckedIn = await checkAttendance(getDetails.id);
+  if (isAlreadyCheckedIn) {
+    return ApiResponse.badRequest(res, "Attendance already confirmed for this code");
+  }
+
+  const attendance = await insertAttendance({
+    booking_id: getDetails.id,
+    user_id: getDetails.user_id,
+    event_id: parseInt(req.params.id),
+  });
+
+  ApiResponse.success(res, attendance, "Attendance logged successfully");
 });
